Bug 1391534 - Fix computed prefixed linear gradient direction serialization  r=dholbert

Prefixed linear gradients use direction keyword to indicate starting point of the
gradient but modern syntax uses this keyword to indicate ending point of the gradient.
Top-to-bottom direction is the default value for gradients. Therefore `top` is default
value of prefixed linear gradients and `to bottom` is default one for unprefixed one.
For brevity, we omit the direction keyword from our serialization when it matches the
default direction, but we were incorrectly trying to remove `bottom` keyword from
prefixed computed values.

MozReview-Commit-ID: 8UCsFE44LRX

--HG--
extra : rebase_source : 6185aec4c3c1b0647015d00d31e0120c9448867e